--- a/powergrid/static/html/base.html
+++ b/powergrid/static/html/base.html
@@ -19,9 +19,10 @@
     <![endif]-->
 </head>
 <body>
+<div class="container">
 {% block body %}
 {% end %}
-
+</div>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
