--- a/powergrid/static/html/index.html
+++ b/powergrid/static/html/index.html
@@ -1,13 +1,23 @@
 {% extends "base.html" %}
 
-{% block title %}Test Page{% end %}
+{% block title %}Power Grid City Tracker{% end %}
 
 {% block body %}
-<div>
+<div class="col-md-4">
+<h3>Pending Purchase</h3>
+    <ul id="pendinglist" class="list-unstyled"></ul>
+    <h3 id="cost">Cost: 0</h3>
+    <button id="btn-submit" type="button" class="btn btn-default">Submit</button>
+</div>
+<div class="col-md-4">
+    <h3>Board <button id="btn-clear" type="button" class="btn btn-danger">Clear Board</button></h3>
+    <ul id="citylist" class="list-unstyled"></ul>
+</div>
+<div class="col-md-4">
     <h3> Players: </h3>
 
     <div>
-        <ul id='playerlist'>
+        <ul id='playerlist' class="list-unstyled">
         </ul>
     </div>
 </div>
