--- a/powergrid/static/html/index.html
+++ b/powergrid/static/html/index.html
@@ -25,14 +25,18 @@
 
 
 <div class="col-md-4">
-    <h3>Board <button id="btn-clear" type="button" class="btn btn-danger">Clear Board</button></h3>
+    <h3>Board <button id="btn-clear" type="button" class="btn btn-danger" style="float:right;">Clear Board</button></h3>
     <ul id="citylist" class="list-unstyled"></ul>
 </div>
 <div class="col-md-4">
-    <h3>Pending Purchase</h3>
+    <h3>Pending Purchase:</h3>
     <ul id="pendinglist" class="list-unstyled"></ul>
-    <h3 id="cost">Cost: 0</h3>
-    <button id="btn-submit" type="button" class="btn btn-default">Submit</button>
+
+    <h3>Cost Breakdown:</h3>
+    <h4 id="housecost">Houses: 0</h4>
+    <h4 id="pathcost">Connection: 0</h4>
+    <h4 id="cost">Total Cost: 0</h4>
+    <button id="btn-submit" type="button" class="btn btn-primary">Purchase!</button>
 </div>
 <div class="col-md-4">
     <h3> Players: </h3>
